# jokes

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
jokes/: __init__.py  server.py
web/: app.js  index.html  styles.css
