[project]
name = "jokes"
version = "0.1.0"
description = "A single-screen web app that serves random jokes in the browser."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
jokes = "jokes.server:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jokes"]

